# SearchInFile

./: CMakeLists.txt  LICENSE  README.md  makefile
include/: options.h  parse_arguments.h  search.h
src/: CMakeLists.txt  main.cpp  parse_arguments.cpp  search.cpp
